Add javafx module location to build.gradle